syntax = "proto3";

package spine.test.trace;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.trace";
option java_outer_classname = "AirportProto";
option java_multiple_files = true;

import "spine/time/time.proto";

message AirportId {
    string code = 1;
}

message FlightId {

    string uuid = 1;
}

message Airport {

    AirportId id = 1;

    string city = 2;

    string country = 3;

    string name = 4;
}

message Flight {
    option (entity).kind = AGGREGATE;

    FlightId id = 1;

    Airport from = 2;

    Airport to = 3;

    time.ZonedDateTime scheduled_departure = 4;

    time.ZonedDateTime scheduled_arrival = 5;
}
