syntax = "proto3";

package spine.test.trace;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.trace";
option java_outer_classname = "AirportCommandsProto";
option java_multiple_files = true;

import "spine/time/time.proto";
import "spine/test/trace/airport.proto";

message ScheduleFlight {

    FlightId id = 1;

    Airport from = 2;

    Airport to = 3;

    time.ZonedDateTime scheduled_departure = 4;

    time.ZonedDateTime scheduled_arrival = 5;
}

message RescheduleFlight {

    FlightId id = 1;

    time.ZonedDateTime scheduled_departure = 2;

    time.ZonedDateTime scheduled_arrival = 3;
}

message StartBoarding {
    FlightId id = 1;
}

message CompleteBoarding {
    FlightId id = 1;
}

message CancelBoarding {
    FlightId id = 1;
}

message CancelFlight {
    FlightId id = 1;
}
